# reforger-server

./: .gitignore  Dockerfile  FF_config2.json  README.md  compose.freedom-fighters.yaml  compose.yaml  docker-entrypoint.sh  main.py
config/: FreedomFighters_ServerConfig.example.json  config.FfExample.json  config.SandboxExample.json  config.example.json  ec2-agent.env.example  ec2-idle.env.example  server.example.json
deploy/: README.md  install-systemd.sh
deploy/aws/: README.md  install-systemd.sh  reforger-idle-shutdown.service  reforger-server.service  reforger_idle_shutdown.py
deploy/aws/discord-lambda/: README.md  app.py  template.yaml
deploy/aws/systemd/: reforger-idle-shutdown.service
deploy/discord-lambda/: README.md  app.py  pyproject.toml  register_commands.py  template.yaml
deploy/discord-lambda/tests/: test_app.py
deploy/host-agent/: reforger_host_agent.py
deploy/idle-shutdown/: reforger_idle_shutdown.py
deploy/systemd/: reforger-host-agent.service  reforger-idle-shutdown.service  reforger-server.service
scripts/: remove_mod_versions.py
