[project]
name = "reforger-discord-lambda"
version = "0.1.0"
description = "Discord slash-command Lambda for the Reforger EC2 instance."
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.34.0",
    "pynacl>=1.5.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
